--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   animate_do: ^3.3.4
+  firebase_core: ^3.9.0
+  firebase_auth: any
 
 dev_dependencies:
   flutter_test:
